# MediaController

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
src/main/java/com/xhhold/plugin/: WinRTMediaSessionManager.java
src/main/kotlin/com/xhhold/plugin/: MediaService.kt  ProjectOpenCloseListener.kt  WinRTMediaSessionManager.kt
src/main/kotlin/com/xhhold/plugin/actions/: MediaArtAction.kt  MediaNextAction.kt  MediaPauseAction.kt  MediaPlayAction.kt  MediaPlayerSelectorAction.kt  MediaPreviousAction.kt
src/main/kotlin/com/xhhold/plugin/entity/: MediaMetadata.kt  PlayerProperties.kt
src/main/kotlin/com/xhhold/plugin/player/: LinuxMediaPlayer.kt  MediaPlayer.kt  WindowsMediaPlayer.kt
src/main/kotlin/com/xhhold/plugin/service/: LinuxMediaPlayerService.kt  MediaPlayerService.kt  WindowsMediaPlayerService.kt
winrt_media_session_manager/: .gitignore  CMakeLists.txt  media_session_manager.cpp  pch.h
wmsm/: CMakeLists.txt  pch.h  wmsm.cpp  wmsm.h
